# meg

./: .env.example  .gitignore  LICENSE  README.md  VISION.md  pyproject.toml
.cursor/: rules
.github/workflows/: ci.yml
docs/: STATUS.md  qa-run.json  v0.1-roadmap.md
meg/: __init__.py  cli.py  config.py  exec.py  ffprobe.py  prompt.py
meg/providers/: __init__.py  anthropic.py  base.py  openai.py
scripts/: github-publish.ps1  run_qa_suite.py  summarize_qa.py
tests/: test_cli.py  test_config.py  test_exec.py  test_ffprobe.py  test_progress.py  test_prompt.py  test_providers.py
