[project]
name = "meg-cli"
version = "0.1.0"
description = "AI-powered FFmpeg assistant for the terminal"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
dependencies = [
    # Pinned ranges: Meg uses messages.create (anthropic) and responses.create (openai).
    "anthropic>=0.40,<1",
    "openai>=2.0,<3",
    "typer>=0.12.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
]

[project.scripts]
meg = "meg.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["meg"]

[tool.pytest.ini_options]
testpaths = ["tests"]
